--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,8 +4,10 @@ SET(PROJECT_WORDS_TEST wordsTests)
 
 project(${PROJECT_WORDS_TEST})
 
+include_directories(${SOURCE_DIR})
+
 add_executable(${PROJECT_WORDS_TEST} wordsTests.cpp)
-target_link_libraries(${PROJECT_WORDS_TEST} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_WORDS_TEST} ${Boost_LIBRARIES} wordslib)
 add_test(NAME ${PROJECT_WORDS_TEST} COMMAND ${PROJECT_WORDS_TEST})
 
 
