--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${SOURCE_DIR}/cmake")
-# set(CMAKE_INCLUDE_PATH "${CMAKE_INCLUDE_PATH} ${SOURCE_DIR}/shadow ${SOURCE_DIR}/unhesher")
 
 set(MY_CXX_FLAGS  " -DBOOST_ERROR_CODE_HEADER_ONLY")
 set(MY_EXE_LINKER_FLAGS  "-pthread -lcrypt")
@@ -10,7 +9,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MY_EXE_LINKER_FLAGS}")
 include(cmake/version.cmake)
 include(cmake/third_party.cmake)
 
-# include_directories(${SOURCE_DIR}/common)
+include_directories(${SOURCE_DIR})
 
 add_subdirectory(wordslib)
 add_subdirectory(tests)
